--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "pols-tools",
+  "name": "pols-icons",
   "version": "1.0.0",
-  "description": "Creador y compilador de custom-elements para la web y fuentes de íconos.",
-  "main": "tools.js",
-  "directories": {
-    "lib": "lib"
-  },
+  "description": "Crear plantillas para compilar archivos SGV a IconFonts.",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "pols-elements": "./bin/pols-elements.js",
     "pols-icons": "./bin/pols-icons.js"
   },
   "preferGlobal": true,
-  "author": "Pols",
+  "author": "Jean Paul Sánchez Mendoza",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.3.2",
     "icon.font": "^1.1.1",
-    "minify": "^4.1.1",
-    "sass": "^1.15.2"
+    "pols-helper": "^1.0.6"
   },
   "devDependencies": {}
 }
