--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "pols-icons",
   "version": "1.0.0",
   "description": "Crear plantillas para compilar archivos SGV a IconFonts.",
-  "main": "index.js",
+  "main": "./bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./bin/index.js"
   },
   "bin": {
-    "pols-icons": "./bin/pols-icons.js"
+    "pols-icons": "./bin/index.js"
   },
   "preferGlobal": true,
   "author": "Jean Paul Sánchez Mendoza",
   "license": "MIT",
   "dependencies": {
-    "icon.font": "^1.1.1",
-    "pols-helper": "^1.0.6"
-  },
-  "devDependencies": {}
+    "icon.font": "^1.1.3"
+  }
 }
