--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,15 +5,32 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"type": "pwa-node",
+			"type": "node",
 			"request": "launch",
 			"name": "Test",
 			"skipFiles": [
 				"<node_internals>/**"
 			],
-			"program": "bin/index.js",
-			"args": [
-				"compile"
+			"runtimeExecutable": "npm",
+			"runtimeArgs": [
+				"run",
+				"test",
+				"help"
+			]
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "Create",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"runtimeExecutable": "npm",
+			"runtimeArgs": [
+				"run",
+				"test",
+				"create",
+				"test"
 			]
 		}
 	]
