--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
 		"baseUrl": ".",
 		"rootDir": ".",
 		"module": "CommonJS",
-		"removeComments": true
+		"removeComments": true,
+		"paths": {
+			"@resources/*": [
+				"./resources"
+			]
+		}
 	},
 	"exclude": [
 		"node_modules"
