--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"icon.font": "^1.1.3"
 	},
 	"devDependencies": {
+		"@types/node": "^20.5.7",
 		"eslint": "^8.48.0",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.2.2"
