--- a/resources/config.template
+++ b/resources/config.template
@@ -1,9 +1,11 @@
 export default {
 	fontName: '@@fontName',
+	iconClassPrefix: 'i-',
+	baseClass: '@@fontNameLower-font',
 	codepointRanges: [
-		[97, 122], // a - z
-		[65, 90], // A - Z
-		[48, 57], // 0 - 9
+		// [97, 122], // a - z
+		// [65, 90], // A - Z
+		// [48, 57], // 0 - 9
 		[0xe001, Infinity] //57345 - infinito
 	]
 }
